# irrtree

./: .gitignore  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
