[metadata]
name = irrtree
version = attr: irrtree.__version__
maintainer = Job Snijders
maintainer_email = job@instituut.net
url = https://github.com/job/irrtree
description = IRRTree
long_description = file: README.md
license = BSD 2-Clause
keywords = irr, python, bgp, routing, networking
classifiers = 
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7

[options]
packages = irrtree

[options.entry_points]
console_scripts =
    irrtree = irrtree.cli:main
install_requires =
    asciitree == 0.3.3
    progressbar2 >=3
